--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+
+.main_app{
+	background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);;
+	display: grid;
+	justify-content: center;
+	padding: 150px 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main_todo{
+	background-color: white;
+	padding: 50px;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.main_todo h1{
+	margin: 0 0 30px 0 ;
+	font-weight: 800;
+	font-size: 2.8rem;
+	letter-spacing: 2px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
