--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);;
+  background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
 }
 
 code {
